<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_order_history"
            android:title="@string/order_history" />
        <item
            android:id="@+id/nav_top_up"
            android:title="@string/top_up" />
        <item
            android:id="@+id/nav_my_order"
            android:title="@string/my_order" />
        <item
            android:id="@+id/nav_assortment"
            android:title="@string/Assortment" />
        <item
            android:id="@+id/nav_allergy_information"
            android:title="@string/allergy_information" />
        <item
            android:id="@+id/nav_scanorder"
            android:title="@string/scanorder"/>
    </group>

</menu>