<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/greenbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="#ccffcc"
        android:contentDescription="@string/green_bar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/checkmark"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:contentDescription="@string/checkmark"
            android:src="@mipmap/checkmark" />

        <TextView
            android:id="@+id/paymentsuccessful"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingRight="15dp"
            android:text="@string/payment_successful"
            android:textColor="#009900"
            android:textSize="26dp" />

    </LinearLayout>

</FrameLayout>
