<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marni.orderapp.Presentation.Activities.RegisterActivity">


    <ImageView
        android:src="@mipmap/rsz_3logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/company_image"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="32sp"
        android:paddingBottom="25dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:id="@+id/textViewSignIn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textsize"
        android:text="@string/emailaddress"
        android:id="@+id/emailTextview"
        android:textColor="#000000"
        android:layout_below="@+id/textViewSignIn"
        android:layout_alignLeft="@+id/emailTextfield"
        android:layout_alignStart="@+id/emailTextfield" />

    <EditText
        android:id="@+id/emailTextfield"
        android:layout_width="320dp"
        android:textSize="@dimen/textsize"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/emailTextview"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textsize"
        android:text="@string/password"
        android:id="@+id/passwordTextview"
        android:layout_below="@+id/emailTextfield"
        android:layout_alignLeft="@+id/emailTextfield"
        android:layout_alignStart="@+id/emailTextfield"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/firstPasswordTextfield"
        android:layout_width="320dp"
        android:textSize="@dimen/textsize"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTextview"
        android:layout_alignLeft="@+id/passwordTextview"
        android:layout_alignStart="@+id/passwordTextview"
        android:inputType="textPassword"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textsize"
        android:text="@string/confirm_password"
        android:id="@+id/confirmPasswordTextview"
        android:layout_below="@+id/firstPasswordTextfield"
        android:layout_alignLeft="@+id/firstPasswordTextfield"
        android:layout_alignStart="@+id/firstPasswordTextfield"
        android:textColor="#000000"/>

    <EditText
        android:layout_width="320dp"
        android:textSize="@dimen/textsize"
        android:layout_height="wrap_content"
        android:id="@+id/secondPasswordTextfield"
        android:layout_below="@+id/confirmPasswordTextview"
        android:layout_alignLeft="@+id/confirmPasswordTextview"
        android:layout_alignStart="@+id/confirmPasswordTextview"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@+id/secondPasswordTextfield"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

