<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.marni.orderapp.presentation.activities.TopUpActivity"
    tools:openDrawer="start">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--test-->
    <include
        android:id="@+id/toolbar_include"
        layout="@layout/toolbar_topup"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

        <TextView
            android:id="@+id/topup_currentbalance"
            android:layout_width="match_parent"
            android:layout_below="@+id/toolbar_include"
            android:layout_height="wrap_content"
            android:text="@string/topup_name"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:id="@+id/topup_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/topup_currentbalance"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/topup_radiobutton1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="60dp"
                    android:layout_marginStart="60dp"
                    android:onClick="onRadioButtonClicked" />

                <TextView
                    android:id="@+id/topup_currency"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:text="@string/topup_concurrency"
                    android:textSize="40sp"
                    android:gravity="center"
                    android:textColor="@android:color/black"/>

                <EditText
                    android:id="@+id/topup_edittext_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="100dp"
                    android:layout_marginEnd="100dp"
                    android:hint="@string/topup_hint_value"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/topup_radiobutton2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="60dp"
                    android:layout_marginStart="60dp"
                    android:gravity="center_vertical"
                    android:onClick="onRadioButtonClicked"/>

                <TextView
                    android:id="@+id/topup_currency2"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:text="@string/topup_concurrency"
                    android:textSize="40sp"
                    android:gravity="center"
                    android:textColor="@android:color/black"/>

                <Spinner
                    android:id="@+id/topup_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="100dp"
                    android:layout_marginEnd="100dp"
                    android:entries="@array/TopUpAmount">
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/topup_radiobutton3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="60dp"
                    android:layout_marginStart="60dp"
                    android:gravity="center_vertical"
                    android:onClick="onRadioButtonClicked"/>

                <TextView
                    android:id="@+id/topup_currency3"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:text="@string/topup_concurrency"
                    android:textSize="40sp"
                    android:gravity="center"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/topup_textview_maxtopup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="100dp"
                    android:layout_marginEnd="100dp"
                    android:gravity="center"
                    android:text="Max topup"
                    android:textSize="16sp">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/customborder">

                <TextView
                    android:id="@+id/topup_edittext_newbalance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:hint="@string/topup_newbalance"
                    android:enabled="false"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
</RelativeLayout>

    <include layout="@layout/nav_view" />

</android.support.v4.widget.DrawerLayout>